Fix two minor dark mode issues

--- a/core-bundle/contao/themes/flexible/main.css
+++ b/core-bundle/contao/themes/flexible/main.css
@@ -141,7 +141,7 @@ body.popup {
 	background: var(--content-bg);
 	border: 1px solid var(--content-border);
 	box-shadow: 0 1px 6px rgba(0,0,0,.2);
-	z-index: 1;
+	z-index: 2;
 	color: var(--text);
 	text-align: left;
 	opacity: 0;
